--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,13 @@ local.properties
 .recommenders
 */.classpath
 */.project
+*.xml
 
 Servers/
 MANIFEST.MF 
 catalina.policy
 catalina.properties
+bootstrap-4.6.1-dist/
 
 # External tool builders
 .externalToolBuilders/
